update delete task with warning using sweetalert

--- a/WebClient/wwwroot/index.html
+++ b/WebClient/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -29,6 +29,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="/assets/vendors/sweetalert.min.js"></script>
 </body>
 
 </html>
